--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@
   url: /archives
 - title: 分类
   url: /categories
+- title: 标签
+  url: /tags/
 - title: Youtube
   url: https://www.youtube.com/channel/UCmlhPmTdqYhRWwWZWSIBwGw
 - title: 搜索
