--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: biezhi.me@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   欢迎来到「代码真香」技术博客。
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.codesofun.com" # the base hostname & protocol for your site, e.g. http://example.com
 logo: "/assets/images/logo.png"
 permalink: /:title.html
 
